[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symWannier"
version = "1.1.0"
description = "A python package for computing symmetry adapted Wannier functions with irreducible BZ"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
{name = "Takashi Koretsune", email = "koretsune@cmpt.phys.tohoku.ac.jp"}
]
license = {text = "GPLv2"}
dependencies = [
	"requests",
	"numpy",
	"scipy",
	"docopt",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["symwannier"]

[project.scripts]
symwannier = "symwannier.cli:main"
